cmake_minimum_required(VERSION 3.7)
project(learn_c)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        mysrc/pointer/1.c
        mysrc/pointer/2.c
        mysrc/pointer/a2a.c
        mysrc/pointer/atp.c
        mysrc/pointer/c+.c
        mysrc/pointer/c-.c
        mysrc/pointer/carr.c
        mysrc/pointer/co.c
        mysrc/pointer/cpp.c
        mysrc/pointer/cptr1.c
        mysrc/pointer/cptr2.c
        mysrc/pointer/p2a.c
        mysrc/1.c
        mysrc/2.c
        mysrc/2arr.c
        mysrc/array.c
        mysrc/check_virtual_service.c
        mysrc/eswithc.c
        mysrc/get.c
        mysrc/getav.c
        mysrc/int.c
        mysrc/max.c
        mysrc/p100.c
        mysrc/p101.c
        mysrc/p102.c
        mysrc/p118.c
        mysrc/p119.c
        mysrc/p120.c
        mysrc/p121.c
        mysrc/p122.c
        mysrc/p123.c
        mysrc/p124.c
        mysrc/p126.c
        mysrc/p130.c
        mysrc/p132.c
        mysrc/p134.c
        mysrc/p136.c
        mysrc/p137.c
        mysrc/p138.c
        mysrc/p143.c
        mysrc/p15.c
        mysrc/p155.c
        mysrc/p174-1.c
        mysrc/p174-2.c
        mysrc/p188_err.c
        mysrc/p189.c
        mysrc/p53.c
        mysrc/p54.c
        mysrc/p55.c
        mysrc/p56.c
        mysrc/p60.c
        mysrc/p62.c
        mysrc/p63.c
        mysrc/p64.c
        mysrc/p66.c
        mysrc/p67.c
        mysrc/p68.c
        mysrc/p70.c
        mysrc/p71.c
        mysrc/p72.c
        mysrc/p73.c
        mysrc/p74.c
        mysrc/p76.c
        mysrc/p77.c
        mysrc/p78.c
        mysrc/p79.c
        mysrc/p80.c
        mysrc/p81-2.c
        mysrc/p81.c
        mysrc/p88.c
        mysrc/p90-2.c
        mysrc/p90.c
        mysrc/p91.c
        mysrc/p92.c
        mysrc/p92_err.c
        mysrc/p93.c
        mysrc/p94.c
        mysrc/p95.c
        mysrc/p96.c
        mysrc/p97.c
        mysrc/p98.c
        mysrc/why.c
        src/2017src.c
        src/main.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/advio/old/dgechoaddr.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/advio/old/recvfromflags.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/advio/old/test01.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/advio/daytimetcpcli.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/advio/daytimeudpcli3.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/advio/daytimeudpcli4.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/advio/dgclitimeo.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/advio/dgclitimeo1.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/advio/dgclitimeo2.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/advio/dgclitimeo3.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/advio/dgechoaddr.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/advio/recvfromflags.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/advio/sig_chld_waitpid.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/advio/str_cli_kqueue04.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/advio/str_cli_poll03.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/advio/str_cli_select02.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/advio/str_echo_stdio02.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/advio/tcpcli01.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/advio/tcpcli02.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/advio/tcpcli03.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/advio/tcpcli04.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/advio/tcpserv02.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/advio/udpcli01.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/advio/udpcli02.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/advio/udpcli03.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/advio/udpserv01.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/advio/udpserv03.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/advio/udpserv04.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/bcast/dgclibcast1.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/bcast/dgclibcast2.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/bcast/dgclibcast3.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/bcast/dgclibcast4.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/bcast/dgclibcast5.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/bcast/dgclibcast6.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/bcast/udpcli01.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/bcast/udpcli02.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/bcast/udpcli03.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/bcast/udpcli04.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/bcast/udpcli05.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/bcast/udpcli06.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/debug/backlog.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/debug/qlen.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/debug/test01.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/debug/test02.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/debug/test03.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/debug/test04.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/debug/test05.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/debug/test06.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/debug/unpxti.h
        unix/UNIXNetworkProgramming/source_code/unpv13e/icmpd/dgcli01.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/icmpd/icmpd.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/icmpd/icmpd.h
        unix/UNIXNetworkProgramming/source_code/unpv13e/icmpd/readable_conn.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/icmpd/readable_listen.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/icmpd/readable_v4.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/icmpd/readable_v6.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/icmpd/udpcli01.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/icmpd/unpicmpd.h
        unix/UNIXNetworkProgramming/source_code/unpv13e/inetd/daytimetcpsrv2.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/inetd/daytimetcpsrv3.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/intro/byteorder.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/intro/daytimetcpcli.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/intro/daytimetcpcli1.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/intro/daytimetcpcli2.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/intro/daytimetcpcli3.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/intro/daytimetcpcliv6.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/intro/daytimetcpsrv.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/intro/daytimetcpsrv1.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/intro/daytimetcpsrv2.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/intro/daytimetcpsrv3.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/intro/daytimetcpsrvv6.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/ioctl/lsif01.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/ioctl/lsif02.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/ioctl/prifinfo.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/ioctl/prmac.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/ioctl/test1.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/ipopts/dgechoprintroute.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/ipopts/sigchldwaitpid.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/ipopts/sourceroute.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/ipopts/sourceroute6.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/ipopts/tcpcli01.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/ipopts/tcpserv01.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/ipopts/udpcli01.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/ipopts/udpserv01.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/key/add.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/key/dump.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/key/name.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/key/printsadbmsg.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/key/register.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/key/unp.h
        unix/UNIXNetworkProgramming/source_code/unpv13e/lib/addrinfo.h
        unix/UNIXNetworkProgramming/source_code/unpv13e/lib/connect_nonb.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/lib/connect_timeo.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/lib/daemon_inetd.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/lib/daemon_init.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/lib/dg_cli.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/lib/dg_echo.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/lib/error.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/lib/family_to_level.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/lib/get_ifi_info.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/lib/gf_time.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/lib/host_serv.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/lib/hstrerror.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/lib/if_indextoname.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/lib/if_nameindex.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/lib/if_nametoindex.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/lib/in6addr_any.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/lib/mcast_get_if.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/lib/mcast_get_loop.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/lib/mcast_get_ttl.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/lib/mcast_join.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/lib/mcast_leave.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/lib/mcast_set_if.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/lib/mcast_set_loop.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/lib/mcast_set_ttl.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/lib/my_addrs.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/lib/pselect.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/lib/read_fd.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/lib/readable_timeo.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/lib/readline.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/lib/readn.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/lib/rtt.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/lib/signal.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/lib/signal_intr.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/lib/snprintf.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/lib/sock_bind_wild.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/lib/sock_cmp_addr.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/lib/sock_cmp_port.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/lib/sock_get_port.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/lib/sock_ntop.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/lib/sock_ntop_host.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/lib/sock_set_addr.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/lib/sock_set_port.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/lib/sock_set_wild.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/lib/sockatmark.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/lib/sockfd_to_family.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/lib/str_cli.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/lib/str_echo.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/lib/tcp_connect.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/lib/tcp_listen.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/lib/tv_sub.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/lib/udp_client.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/lib/udp_connect.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/lib/udp_server.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/lib/unp.h
        unix/UNIXNetworkProgramming/source_code/unpv13e/lib/unpifi.h
        unix/UNIXNetworkProgramming/source_code/unpv13e/lib/unprtt.h
        unix/UNIXNetworkProgramming/source_code/unpv13e/lib/unpthread.h
        unix/UNIXNetworkProgramming/source_code/unpv13e/lib/wraplib.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/lib/wrappthread.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/lib/wrapsock.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/lib/wrapstdio.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/lib/wrapunix.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/lib/writable_timeo.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/lib/write_fd.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/lib/writen.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/libfree/addrinfo.h
        unix/UNIXNetworkProgramming/source_code/unpv13e/libfree/getaddrinfo.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/libfree/getnameinfo.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/libfree/in_cksum.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/libfree/inet_aton.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/libfree/inet_ntop.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/libfree/inet_ntop_ipv4.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/libfree/inet_pton.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/libfree/inet_pton_ipv4.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/libfree/test_ascii2addr.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/libfree/test_getservbyname_r.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/libfree/test_inet_pton.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/libgai/old/ga_unixstruct.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/libgai/old/savecopy.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/libgai/addrinfo.h
        unix/UNIXNetworkProgramming/source_code/unpv13e/libgai/freeaddrinfo.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/libgai/ga_aistruct.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/libgai/ga_clone.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/libgai/ga_echeck.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/libgai/ga_nsearch.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/libgai/ga_port.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/libgai/ga_serv.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/libgai/ga_unix.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/libgai/gai_hdr.h
        unix/UNIXNetworkProgramming/source_code/unpv13e/libgai/gai_strerror.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/libgai/getaddrinfo.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/libgai/getnameinfo.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/libgai/gn_ipv46.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/libgai/test1.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/libgai/testga.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/libroute/get_rtaddrs.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/libroute/if_indextoname.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/libroute/if_nameindex.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/libroute/if_nametoindex.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/libroute/net_rt_dump.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/libroute/net_rt_iflist.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/libroute/sock_masktop.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/libroute/unproute.h
        unix/UNIXNetworkProgramming/source_code/unpv13e/mcast/dgclibcast1.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/mcast/dgclimcast5.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/mcast/dgclimcast6.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/mcast/main.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/mcast/recv.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/mcast/send.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/mcast/udpcli01.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/mcast/udpcli05.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/mcast/udpcli06.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/mcast/udpserv01.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/mysdr/loop.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/mysdr/main.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/mysdr/mysdr.h
        unix/UNIXNetworkProgramming/source_code/unpv13e/names/daytimetcpcli.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/names/daytimetcpcli1.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/names/daytimetcpcli2.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/names/daytimetcpcli3.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/names/daytimetcpsrv1.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/names/daytimetcpsrv2.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/names/daytimetcpsrv3.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/names/daytimetcpsrv4.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/names/daytimeudpcli1.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/names/daytimeudpcli2.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/names/daytimeudpsrv2.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/names/daytimeudpsrv3.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/names/hostent.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/names/hostent2.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/names/hostent3.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/names/myaddrs1.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/names/netent.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/names/prmyaddrs.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/names/prmyaddrs1.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/names/test1.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/names/test2.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/names/udp_server_reuseaddr.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/nonblock/daytimetcpcli.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/nonblock/home_page.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/nonblock/start_connect.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/nonblock/strclifork.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/nonblock/strclinonb.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/nonblock/tcpcli01.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/nonblock/tcpcli02.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/nonblock/tcpcli03.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/nonblock/tcpcli04.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/nonblock/tcpservselect03.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/nonblock/web.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/nonblock/web.h
        unix/UNIXNetworkProgramming/source_code/unpv13e/nonblock/write_get_cmd.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/oob/heartbeatcli.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/oob/heartbeatserv.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/oob/sigchldwaitpid.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/oob/strcliselect02.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/oob/strecho02.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/oob/tcpcli02.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/oob/tcprecv01.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/oob/tcprecv02.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/oob/tcprecv03.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/oob/tcprecv03p.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/oob/tcprecv04.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/oob/tcprecv05.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/oob/tcprecv06.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/oob/tcpsend01.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/oob/tcpsend02.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/oob/tcpsend03.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/oob/tcpsend04.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/oob/tcpsend05.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/oob/tcpsend06.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/oob/tcpserv02.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/ping/old/icmp6.h
        unix/UNIXNetworkProgramming/source_code/unpv13e/ping/old/ip6.h
        unix/UNIXNetworkProgramming/source_code/unpv13e/ping/bsdping.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/ping/init_v6.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/ping/main.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/ping/ping.h
        unix/UNIXNetworkProgramming/source_code/unpv13e/ping/ping_v4.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/ping/proc_v4.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/ping/proc_v6.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/ping/readloop.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/ping/send_v4.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/ping/send_v6.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/ping/sig_alrm.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/ping/tv_sub.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/route/checkudpsum.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/route/get_ifi_info.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/route/getrt.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/route/mynetstat.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/route/prifindex.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/route/prifinfo.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/route/prifname.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/route/prifnameindex.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/route/unproute.h
        unix/UNIXNetworkProgramming/source_code/unpv13e/rtt/dg_cli.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/rtt/dg_echo.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/rtt/dg_send_recv.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/rtt/udpcli01.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/rtt/unprtt.h
        unix/UNIXNetworkProgramming/source_code/unpv13e/sctp/sctp_addr_to_associd.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/sctp/sctp_bindargs.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/sctp/sctp_check_notify.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/sctp/sctp_displayevents.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/sctp/sctp_getnostrm.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/sctp/sctp_modify_hb.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/sctp/sctp_pdapircv.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/sctp/sctp_print_addrs.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/sctp/sctp_strcli.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/sctp/sctp_strcli1.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/sctp/sctp_strcli_un.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/sctp/sctp_strcliecho.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/sctp/sctp_strcliecho2.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/sctp/sctp_wrapper.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/sctp/sctpclient01.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/sctp/sctpclient02.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/sctp/sctpclient04.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/sctp/sctpserv01.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/sctp/sctpserv02.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/sctp/sctpserv03.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/sctp/sctpserv04.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/sctp/sctpserv05.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/sctp/sctpserv06.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/sctp/sctpserv07.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/sctp/sctpserv_fork.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/sctp/unp.h
        unix/UNIXNetworkProgramming/source_code/unpv13e/select/strcliselect01.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/select/strcliselect02.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/select/tcpcli01.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/select/tcpcli02.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/select/tcpcli03.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/server/child.h
        unix/UNIXNetworkProgramming/source_code/unpv13e/server/child02.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/server/child02l.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/server/child02m.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/server/child03.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/server/child03m.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/server/child04.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/server/child05.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/server/client.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/server/clientrst.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/server/lock_fcntl.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/server/lock_pthread.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/server/meter.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/server/pr_cpu_time.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/server/pthread07.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/server/pthread07.h
        unix/UNIXNetworkProgramming/source_code/unpv13e/server/pthread08.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/server/pthread08.h
        unix/UNIXNetworkProgramming/source_code/unpv13e/server/pthread09.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/server/pthread09.h
        unix/UNIXNetworkProgramming/source_code/unpv13e/server/readline.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/server/readline_r.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/server/readline_r.h
        unix/UNIXNetworkProgramming/source_code/unpv13e/server/serv00.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/server/serv01.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/server/serv02.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/server/serv02m.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/server/serv03.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/server/serv03m.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/server/serv04.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/server/serv05.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/server/serv06.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/server/serv07.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/server/serv08.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/server/serv09.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/server/sig_chld_waitpid.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/server/unpthread.h
        unix/UNIXNetworkProgramming/source_code/unpv13e/server/web_child.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/server/web_child_r.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/sigio/dgcli01.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/sigio/dgecho01.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/sigio/udpcli01.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/sigio/udpserv01.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/sock/buffers.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/sock/cliopen.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/sock/crlf.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/sock/error.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/sock/loop.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/sock/looptcp.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/sock/loopudp.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/sock/main.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/sock/multicast.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/sock/ourhdr.h
        unix/UNIXNetworkProgramming/source_code/unpv13e/sock/pattern.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/sock/servopen.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/sock/sinktcp.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/sock/sinkudp.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/sock/sleepus.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/sock/sock.h
        unix/UNIXNetworkProgramming/source_code/unpv13e/sock/sockopts.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/sock/sourceroute.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/sock/sourcesink.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/sock/sourcetcp.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/sock/sourceudp.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/sock/strerror.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/sock/tellwait.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/sock/write.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/sock/writen.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/sockopt/checkopts.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/sockopt/prdefaults.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/sockopt/rcvbuf.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/sockopt/rcvbufset.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/sockopt/sockopt.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/sparc64-unknown-freebsd5.1/config.h
        unix/UNIXNetworkProgramming/source_code/unpv13e/ssntp/main.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/ssntp/ntp.h
        unix/UNIXNetworkProgramming/source_code/unpv13e/ssntp/sntp.h
        unix/UNIXNetworkProgramming/source_code/unpv13e/ssntp/sntp_proc.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/streams/stream_dg/client.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/streams/stream_dg/net_stream.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/streams/stream_dg/server.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/streams/strlist_sock.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/streams/strlist_xti.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/streams/tpi_bind.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/streams/tpi_close.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/streams/tpi_connect.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/streams/tpi_daytime.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/streams/tpi_daytime.h
        unix/UNIXNetworkProgramming/source_code/unpv13e/streams/tpi_read.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/streams/unpxti.h
        unix/UNIXNetworkProgramming/source_code/unpv13e/tcpcliserv/sigchldwait.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/tcpcliserv/sigchldwaitpid.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/tcpcliserv/str_cli08.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/tcpcliserv/str_cli09.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/tcpcliserv/str_cli11.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/tcpcliserv/str_echo08.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/tcpcliserv/str_echo09.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/tcpcliserv/sum.h
        unix/UNIXNetworkProgramming/source_code/unpv13e/tcpcliserv/tcpcli01.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/tcpcliserv/tcpcli04.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/tcpcliserv/tcpcli05.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/tcpcliserv/tcpcli06.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/tcpcliserv/tcpcli07.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/tcpcliserv/tcpcli08.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/tcpcliserv/tcpcli09.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/tcpcliserv/tcpcli10.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/tcpcliserv/tcpcli11.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/tcpcliserv/tcpserv01.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/tcpcliserv/tcpserv02.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/tcpcliserv/tcpserv03.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/tcpcliserv/tcpserv04.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/tcpcliserv/tcpserv08.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/tcpcliserv/tcpserv09.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/tcpcliserv/tcpservpoll01.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/tcpcliserv/tcpservselect01.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/tcpcliserv/tsigpipe.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/test/accept_eintr.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/test/funcs.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/test/readline.h
        unix/UNIXNetworkProgramming/source_code/unpv13e/test/readline1.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/test/readline2.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/test/readline3.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/test/test.h
        unix/UNIXNetworkProgramming/source_code/unpv13e/test/test1.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/test/test2.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/test/tisfdtype.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/test/treadline1.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/test/treadline2.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/test/treadline3.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/test/tshutdown.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/test/tsnprintf.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/threads/example01.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/threads/example02.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/threads/example03.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/threads/readline.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/threads/strclithread.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/threads/strclithread2.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/threads/tcpcli01.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/threads/tcpcli02.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/threads/tcpserv01.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/threads/tcpserv02.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/threads/test01.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/threads/test02.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/threads/test03.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/threads/test04.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/threads/test05.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/threads/unpthread.h
        unix/UNIXNetworkProgramming/source_code/unpv13e/threads/web01.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/threads/web02.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/threads/web03.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/traceroute/icmpcode_v4.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/traceroute/icmpcode_v6.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/traceroute/main.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/traceroute/recv_v4.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/traceroute/recv_v6.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/traceroute/sig_alrm.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/traceroute/trace.h
        unix/UNIXNetworkProgramming/source_code/unpv13e/traceroute/traceloop.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/traceroute/tv_sub.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/udpcksum/cleanup.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/udpcksum/main.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/udpcksum/pcap.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/udpcksum/senddnsquery-libnet.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/udpcksum/senddnsquery-raw.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/udpcksum/udpcksum.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/udpcksum/udpcksum.h
        unix/UNIXNetworkProgramming/source_code/unpv13e/udpcksum/udpread.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/udpcksum/udpwrite.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/udpcliserv/dgcliaddr.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/udpcliserv/dgclibig.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/udpcliserv/dgcliconnect.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/udpcliserv/dgcliinetaddr.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/udpcliserv/dgcliloop1.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/udpcliserv/dgcliloop3.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/udpcliserv/dgecholoop1.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/udpcliserv/dgecholoop2.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/udpcliserv/sigchldwaitpid.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/udpcliserv/udpcli01.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/udpcliserv/udpcli02.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/udpcliserv/udpcli03.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/udpcliserv/udpcli04.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/udpcliserv/udpcli05.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/udpcliserv/udpcli06.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/udpcliserv/udpcli08.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/udpcliserv/udpcli09.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/udpcliserv/udpcli10.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/udpcliserv/udpserv01.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/udpcliserv/udpserv06.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/udpcliserv/udpserv07.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/udpcliserv/udpservselect01.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/unixdomain/daytimetcpcli.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/unixdomain/daytimetcpsrv2.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/unixdomain/mycat.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/unixdomain/myopen.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/unixdomain/openfile.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/unixdomain/readcred.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/unixdomain/sigchldwaitpid.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/unixdomain/strecho.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/unixdomain/testfcred.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/unixdomain/tfcred01.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/unixdomain/unixbind.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/unixdomain/unixdgcli01.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/unixdomain/unixdgserv01.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/unixdomain/unixstrcli01.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/unixdomain/unixstrserv01.c
        unix/UNIXNetworkProgramming/source_code/unpv13e/unixdomain/unixstrserv02.c
        limits.h cpl_2ed/chapter1/chararry.c)

add_executable(learn_c ${SOURCE_FILES})